# TensorJ

./: CMakeLists.txt  Dockerfile  J.g4  LICENSE  README.md  jtensorflow_builder.hpp  lexer.l  main.cpp  parser.y
